--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1266,3 +1266,25 @@ abstract = {A gauge theory with colour gauge group U(N) and quarks having a colo
   doi = {10.1103/PhysRevLett.97.131801},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.97.131801}
 }
+@article{Guagnelli_1998,
+	doi = {10.1016/s0550-3213(98)00599-9},
+  
+	url = {https://doi.org/10.1016%2Fs0550-3213%2898%2900599-9},
+  
+	year = 1998,
+	month = {dec},
+  
+	publisher = {Elsevier {BV}},
+  
+	volume = {535},
+  
+	number = {1-2},
+  
+	pages = {389--402},
+  
+	author = {Marco Guagnelli and Rainer Sommer and Hartmut Wittig},
+  
+	title = {Precision computation of a low-energy reference scale in quenched lattice {QCD}},
+  
+	journal = {Nuclear Physics B},
+}
