Command line arguments implemented, code cleanup

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1288,3 +1288,17 @@ abstract = {A gauge theory with colour gauge group U(N) and quarks having a colo
   
 	journal = {Nuclear Physics B},
 }
+@article{PhysRevD.90.074502,
+  title = {Diffusion of topological charge in lattice QCD simulations},
+  author = {McGlynn, Greg and Mawhinney, Robert D.},
+  journal = {Phys. Rev. D},
+  volume = {90},
+  issue = {7},
+  pages = {074502},
+  numpages = {16},
+  year = {2014},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.90.074502},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.90.074502}
+}
